--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-This app is a digital diary and mood tracker. The goal of {moody} is to track your wellbeing together with a factor which impacts your daily life.
+A digital diary and mood tracker. The goal of {moody} is to track your wellbeing, together with a factor which impacts your daily life.
 
 ## Installation
 
