--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ A digital diary and mood tracker. The goal of {moody} is to track your wellbeing
 
 ## Installation
 
-You can the development version from [GitHub](https://github.com/) with:
+You can download the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
@@ -30,9 +30,8 @@ devtools::install_github("lmuenter/moody")
 ```
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+The app is started using the command
 
-```{r example}
-library(moody)
-## basic example code
+```{r example, eval = FALSE}
+moody::runApp()
 ```
