--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ devtools::install_github("lmuenter/moody")
 ```
 ## Example
 
-The app is started using the command
+The app is started using the command:
 
 ```{r example, eval = FALSE}
 moody::runApp()
