updated logo and README.md

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,5 +33,10 @@ devtools::install_github("lmuenter/moody")
 The app is started using the command:
 
 ```{r example, eval = FALSE}
-moody::runApp()
+moody::moody()
 ```
+
+## App structure
+* **App Location** The app is located under `inst/shiny-examples/myapp/`. 
+* **Functions** Callable functions are located under `R/`
+ 
